[metadata]
name = bspy
version = 4.2
author = Eric Brechner
author_email = ericbrec@msn.com
description = Library for manipulating and rendering non-uniform B-splines
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/ericbrec/BSpy
license = MIT
license_files =
    LICENSE
project_urls =
    Bug Tracker = http://github.com/ericbrec/BSpy/issues
keywords = opengl, bspline, B-spline, nub, tkinter
classifiers =
    License :: OSI Approved :: MIT License
    Environment :: Win32 (MS Windows)
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Multimedia :: Graphics
    Topic :: Multimedia :: Graphics :: 3D Rendering
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = bspy
python_requires = >=3.0
install_requires = 
    numpy
    scipy
	PyOpenGL
    pyopengltk
